--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                   </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
               </nav>
-  
+
+              <div class="form-group col-xs-6 col-xs-offset-3">
+                    <div class="input-group">
+                        <span class="input-group-addon" id="start-date"><span class="glyphicon glyphicon-search"></span></span>
+                        <input type="text" class="form-control" aria-describedby="start-date" placeholder="Search...">    
+                    </div>
+                </div>
+                
 <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="./lib/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="./dist/app.js"></script>
