finished movie search function

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
               <div class="form-group col-xs-6 col-xs-offset-3">
                     <div class="input-group">
-                        <span class="input-group-addon" id="start-date"><span class="glyphicon glyphicon-search"></span></span>
-                        <input type="text" class="form-control" aria-describedby="start-date" placeholder="Search...">    
+                        <span class="input-group-addon" ><span class="glyphicon glyphicon-search"></span></span>
+                        <input type="text" class="form-control" aria-describedby="start-date" id="searchBar" placeholder="Search...">    
                     </div>
             </div>
             
