finished google auth

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div id="authScreen" class="">
                 <h1>Sign In</h1>
-                <button><img src="./images/googlebutton.png"></button>
+                <button><img id="googleButton" src="./images/googlebutton.png"></button>
               </div>
             <div id="search" class="hidden">
                 <div class="form-group col-xs-6 col-xs-offset-3">
