finished my movies

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             
             <div id="myMovies" class="container hidden">
               <h1>My Movies</h1>
+              <div id="moviesMine" class="container"></div>
             </div>
             <div id="authScreen" class="">
                 <h1>Sign In</h1>
